--- a/src/components/SelectField/SelectField.css
+++ b/src/components/SelectField/SelectField.css
@@ -1,14 +1,14 @@
-.field-text{
+.field-select{
     margin:24px 0;
 }
 
-.field-text label{
+.field-select label{
     display:block;
     margin-bottom: 8px;
     font-size: 24px;
 }
 
-.field-text input{
+.field-select select{
     background-color: white;
     width: 100%;
     border: none;
@@ -18,6 +18,6 @@
     border-radius: 20px;
 }
 
-.field-text input:hover{
+.field-select select:hover{
     box-shadow: 5px 5px 30px rgba(0,0,0,0.6);
 }
