--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -9,3 +9,10 @@
     display: inline-block;
     padding-bottom: 8px;
 }
+
+.team-section .integrantes{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 32px;
+    flex-wrap: wrap;
+}
