--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-rodape{
-    background-color: #6278f7;
+    background-color: black;
     justify-content: space-around;
     display: flex;
     padding: 110px;
